# codex

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  Main.hs  Makefile  README.md  TODO.md  cabal.project  default.nix  nix-shell-cabal.project  shell.nix  ui.cabal  ui.nix
atlas/: LICENSE.md  atlas.cabal
atlas/src/Data/: Atlas.hs
atlas/src/Data/Atlas/: Internal.hsc
atlas/test/: Spec.hs
bidi-icu/: LICENSE.md  Makefile  README.md  bidi-icu.cabal
bidi-icu/src/Data/Text/ICU/: Bidi.hsc
bidi-icu/test/: Spec.hs
bidirectional/: README.md  bidirectional.cabal
bidirectional/src/Data/Text/: Bidirectional.hsc
bidirectional/test/: Spec.hs
const/: CHANGELOG.md  README.md  const.cabal
const/src/Data/: Const.hs
const/src/Data/Const/: ByteString.hs  IORef.hs  STRef.hs  Unsafe.hs
const/src/Data/Const/Primitive/: Array.hs  ByteArray.hs  MutVar.hs  PrimArray.hs  SmallArray.hs
const/src/Foreign/Const/: Concurrent.hs  ForeignPtr.hs  Ptr.hs
const/src/Foreign/Const/C/: String.hs
const/src/Foreign/Const/Marshal/: Array.hs  Utils.hs
engine/: .hlint.yaml  Makefile  README.md  engine.cabal  example.hs  shaders
engine/src/: Engine.hs
engine/src/Engine/: Compiler.hs  Display.hs  Exception.hs  Include.hs  Input.hs  Meter.hs  Parser.hs  SDL.hs  Shader.hs  Task.hs  Time.hs
engine/src/Engine/Include/: Body.hs  Cache.hs  Parser.hs
engine/src/Engine/Parser/: Base.hs  Char8.hs  Internal.hs
engine/src/Engine/Shader/: Include.hs
fontconfig/: .hlint.yaml  Makefile  README.md  TODO.md  fontconfig.cabal
fontconfig-freetype/: README.md  fontconfig-freetype.cabal
fontconfig-freetype/src/Graphics/Fontconfig/: FreeType.hs  FreeType.hsc
fontconfig/raw/Graphics/Fontconfig/: Internal.hsc  Private.hsc
fontconfig/src/Graphics/: Fontconfig.hsc
fontconfig/test/: Spec.hs
fontconfig/test/Testing/: Util.hs
fontconfig/test/configs/: 11-good.conf  eevee-font-conf.conf  fonts.conf
fontconfig/test/test-configs/: 10-empty.conf  good.conf
freetype/: .hlint.yaml  CHANGELOG.md  Makefile  README.md  example.hs  freetype.cabal
freetype/cbits/: ft.c  ft.h  hsc-err.h  hsc-struct.h  test.c
freetype/raw/Graphics/FreeType/: Internal.hsc  Private.hs
freetype/src/Graphics/: FreeType.hs  FreeType.hsc
freetype/src/Graphics/FreeType/: Face.hs  Library.hs  Math.hs  Version.hs
freetype/src/Numeric/Fixed/: F26Dot6.hs
freetype/test/: Spec.hs
freetype/test/fonts/: README.md  README.txt
glow/: glow.cabal
glow/src/Graphics/: Glow.hs
glow/src/Graphics/Glow/: Attribute.hs  Block.hs  Buffer.hs  Data.hs  Debug.hs  Draw.hs  Error.hs  Framebuffer.hs  Image.hs  Object.hs  Pixel.hs  Program.hs  ProgramPipeline.hs  Renderbuffer.hs  Sampler.hs  Shader.hs  State.hs  Texture.hs  Types.hs  Uniform.hs  Version.hs  VertexArray.hs
harfbuzz/: .hlint.yaml  LICENSE.md  Makefile  README.md  example.hs  harfbuzz.cabal
harfbuzz-freetype/: Makefile  README.md  example.hs  harfbuzz-freetype.cabal
harfbuzz-freetype/shaders/: example.frag  example.vert
harfbuzz-freetype/src/Graphics/Harfbuzz/: FreeType.hs
harfbuzz-icu/: README.md  harfbuzz-icu.cabal
harfbuzz-icu/src/Graphics/Harfbuzz/: ICU.hs
harfbuzz-opentype/: CHANGELOG.md  README.md  harfbuzz-opentype.cabal
harfbuzz-opentype/src/Graphics/Harfbuzz/: OpenType.hs
harfbuzz-opentype/src/Graphics/Harfbuzz/OpenType/: Font.hs  (+6 more)
harfbuzz-subset/: README.md  harfbuzz-subset.cabal
harfbuzz-subset/src/Graphics/Harfbuzz/: Subset.hs
harfbuzz/core/Graphics/: Harfbuzz.hs
harfbuzz/core/Graphics/Harfbuzz/: Blob.hs  Set.hs  Shape.hs
harfbuzz/freetype/Graphics/Harfbuzz/: FreeType.hs
harfbuzz/icu/Graphics/Harfbuzz/: ICU.hs
harfbuzz/raw/Graphics/Harfbuzz/: Internal.hsc  Private.hs
harfbuzz/src/Graphics/: Harfbuzz.hs
harfbuzz/src/Graphics/Harfbuzz/: Blob.hs  Buffer.hs  Common.hs  Face.hs  Font.hs  Map.hs  Object.hs  Set.hs  Shape.hs  Unicode.hs  Version.hs
harfbuzz/subset/Graphics/Harfbuzz/: Subset.hs
harfbuzz/test/: Spec.hs
harfbuzz/test/fonts/: README.md
language-server/: language-server.cabal
language-server/src/Language/Server/: Parser.hs
language-server/test/: Main.hs  MessageTest.hs
linewrap/: README.md  linewrap.cabal
linewrap/src/Data/: LineWrap.hs
linewrap/src/Data/LineWrap/: BinarySearch.hs  BruteForce.hs  DynamicProg.hs  Linear.hs  ShortestPath.hs  Types.hs  foo.py
linewrap/test/: Spec.hs
parsnip/: .hlint.yaml  CHANGELOG.md  README.md  parsnip.cabal
parsnip/cbits/: parsnip.c  parsnip.h
parsnip/old/: Sum.hs
parsnip/src/Text/: Parsnip.hs
parsnip/src/Text/Parsnip/: Char8.hs  Internal.hs  Location.hs  OldInternal  OldOption  OldParser  Parser.hs  Word8.hs
parsnip/test/: Spec.hs
primitive-extras/: CHANGELOG.md  README.md  Setup.hs  primitive-extras.cabal
primitive-extras/src/Data/Primitive/: Key.hs  StateVar.hs  Unique.hs
primitive-ffi/: Makefile  primitive-ffi.cabal
primitive-ffi/src/Control/Monad/: IOST.hs
primitive-ffi/src/Foreign/: ForeignRef.hs  Ref.hs
primitive-ffi/src/Foreign/ForeignRef/: Unsafe.hs
primitive-ffi/src/Foreign/Ref/: Unsafe.hs
primitive-statevar/: CHANGELOG.md  README.md  primitive-statevar.cabal
primitive-statevar/src/Data/Primitive/: StateVar.hs
primitive-unlift/: primitive-unlift.cabal
ptrdiff/: ptrdiff.cabal
ptrdiff/src/Foreign/Ptr/: Diff.hs
smawk/: CHANGELOG.md  README.md  smawk.cabal
smawk/src/Data/: Smawk.hs
stb-truetype/: CHANGELOG.md  README.md  stb-truetype.cabal
stb-truetype/src/Graphics/STB/: TrueType.hs
tabulation-hash/: CHANGELOG.md  README.md  tabulation-hash.cabal
tabulation-hash/src/Data/Tabulation/: Hash.hs
ui/: Main.hs  ui.cabal  ui.nix
ui/shaders/: glyph.frag
ui/src/: UI.hs
ui/src/UI/: Shaders.hs
ui/test/: Spec.hs
watch/: .hlint.yaml  Makefile  README.md  watch.cabal
watch-directory/: CHANGELOG.md  README.md  watch-directory.cabal
watch-directory/src/Data/Watch/: Directory.hs
watch-directory/test/: Spec.hs
watch-filepath/: watch-filepath.cabal
watch-filepath/src/Data/Watch/: FilePath.hs
watch-filepath/test/: Spec.hs
watch/src/Data/: Watch.hs
watch/src/Data/Watch/: Internal.hs
watch/test/: Spec.hs
(+189 files in other folders)
