cabal-version: 2.2
name: atlas
version: 0
synopsis: Skyline rectangle packing
homepage: https://github.com/ekmett/codex/tree/master/atlas#readme
license: BSD-2-Clause OR Apache-2.0
license-file: LICENSE.md
author: Edward Kmett
maintainer: Edward Kmett <ekmett@gmail.com>
copyright: Copyright (c) 2019 Edward Kmett
stability: experimental
category: Graphics
build-type: Simple
description:
  Skyline rectangle packing for font atlases and the like using @stb_rect_pack.h@
extra-doc-files:
  README.md,
  CHANGELOG.md
extra-source-files: cbits/stb_rect_pack.h

source-repository head
  type: git
  location: https://github.com/ekmett/codex
  subdir: atlas

common base
  default-language: Haskell2010
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Wmissing-export-lists
  build-depends:
    base >= 4.11 && < 5,
    primitive,
    transformers

library
  import: base
  hs-source-dirs: src
  include-dirs: cbits
  build-tool-depends: hsc2hs:hsc2hs
  cc-options: -g -Wall
  build-depends:
    containers,
    data-default,
    inline-c,
    lens,
    template-haskell
  exposed-modules:
    Data.Atlas
    Data.Atlas.Internal

test-suite atlas-test
  import: base
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
    atlas,
    hspec

