cabal-version: 2.2
name: bidi-icu
version: 0
synopsis: The unicode bidirectional algorithm via ICU
description: The unicode bidirectional algorithm via ICU.
homepage: https://github.com/ekmett/codex/tree/master/bidi-icu#readme
license: BSD-2-Clause OR Apache-2.0
license-file: LICENSE.md
author: Edward Kmett
maintainer: Edward Kmett <ekmett@gmail.com>
copyright: Copyright (c) 2019-2021 Edward Kmett
stability: experimental
category: Graphics
build-type: Simple
extra-doc-files:
  README.md,
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ekmett/codex
  subdir: bidi-icu

common base
  default-language: Haskell2010
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Wmissing-export-lists
  build-depends: base >= 4.11 && < 5, data-default, primitive, text, vector

library
  import: base
  hs-source-dirs: src
  build-tool-depends: hsc2hs:hsc2hs
  if os(darwin)
    -- brew does not add icu-uc to pkg-config, because Apple
    -- ships a subset of ICU itself.
    extra-lib-dirs: /usr/local/opt/icu4c/lib
    include-dirs: /usr/local/opt/icu4c/include
    extra-libraries: icuuc
  else
    pkgconfig-depends: icu-uc
  build-depends: containers >= 0.6, ghc-prim, inline-c, template-haskell, transformers
  exposed-modules: Data.Text.ICU.Bidi

test-suite spec
  import: base
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  build-depends: bidi-icu, ghc-prim, hspec, tasty, tasty-hspec
  main-is: Spec.hs
