cabal-version: 2.2
name: bidirectional
version: 0
synopsis: The unicode bidirectional algorithm via ICU
description: The unicode bidirectional algorithm via ICU
homepage: https://github.com/ekmett/codex/tree/master/bidirectional#readme
license: BSD-2-Clause OR Apache-2.0
license-file: LICENSE.md
author: Edward Kmett
maintainer: Edward Kmett <ekmett@gmail.com>
copyright: Copyright (c) 2019 Edward Kmett
stability: experimental
category: Graphics
build-type: Simple
extra-doc-files:
  README.md,
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ekmett/codex

library
  default-language: Haskell2010
  build-tool-depends: hsc2hs:hsc2hs
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Wmissing-export-lists
  if os(darwin)
    -- brew does not add icu-uc to pkg-config, because Apple
    -- ships a subset of ICU itself.
    extra-lib-dirs: /usr/local/opt/icu4c/lib
    include-dirs: /usr/local/opt/icu4c/include
    extra-libraries: icuuc
  else
    pkgconfig-depends: icu-uc
  build-depends:
    base >= 4.11 && < 5,
    containers >= 0.6,
    data-default,
    ghc-prim,
    inline-c,
    primitive,
    template-haskell,
    text,
    transformers,
    vector
  hs-source-dirs: src
  exposed-modules: Data.Text.Bidirectional
