cabal-version: 2.2
name: const
version: 0
synopsis: Read-only mutable primitives
homepage: https://github.com/ekmett/codex/tree/master/const#readme
license: BSD-2-Clause OR Apache-2.0
license-file: LICENSE.md
author: Edward Kmett
maintainer: Edward Kmett <ekmett@gmail.com>
copyright: Copyright (c) 2019-2021 Edward Kmett
stability: experimental
category: FFI
build-type: Simple
description:
  Read-only mutable primitives.
  .
  This can be used for more accurate FFI bindings
  or simply to indicate more cleanly in your code
  what you are and aren't allowed to modify.
extra-doc-files:
  README.md,
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ekmett/codex
  subdir: const

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Wmissing-export-lists
  build-depends:
    , base >= 4.12 && < 5
    , bytestring >= 0.10.8 && < 0.12
    , primitive ^>= 0.7
    , ptrdiff ^>= 0
  exposed-modules:
    Data.Const
    Data.Const.ByteString
    Data.Const.IORef
    Data.Const.STRef
    Data.Const.Unsafe
    Data.Const.Primitive.Array
    Data.Const.Primitive.ByteArray
    Data.Const.Primitive.PrimArray
    Data.Const.Primitive.MutVar
    Data.Const.Primitive.SmallArray
    Foreign.Const.C.String
    Foreign.Const.Concurrent
    Foreign.Const.ForeignPtr
    Foreign.Const.Ptr
    Foreign.Const.Marshal.Array
    Foreign.Const.Marshal.Utils
