cabal-version: 2.2
name: engine
version: 0
synopsis: A toy 2d rendering engine
description: A toy 2d rendering engine
homepage: https://github.com/ekmett/codex/tree/master/engine#readme
license: BSD-2-Clause OR Apache-2.0
license-file: LICENSE.md
author: Edward Kmett
maintainer: Edward Kmett <ekmett@gmail.com>
copyright: Copyright (c) 2019 Edward Kmett
stability: experimental
category: Graphics
build-type: Simple
extra-doc-files:
  README.md,
  CHANGELOG.md
data-files:
  shaders/*.frag,
  shaders/*.vert

source-repository head
  type: git
  location: https://github.com/ekmett/codex

common base
  default-language: Haskell2010
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Wmissing-export-lists
  build-depends:
    attoparsec,
    base >= 4.11 && < 5,
    bytestring,
    containers,
    data-default,
    fingertree,
    gl,
    glow,
    lens,
    linear,
    parser-combinators,
    primitive-statevar,
    sdl2,
    StateVar,
    stm,
    text,
    time,
    transformers,
    unliftio-core,
    watch,
    watch-directory

common executable
  import: base
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T

library
  import: base
  hs-source-dirs: src
  exposed-modules:
    Engine
    Engine.Display
    Engine.Exception
    Engine.Input
    Engine.Meter
    Engine.Parser
    Engine.Parser.Base
    Engine.Parser.Char8
    Engine.Parser.Internal
    Engine.SDL
    Engine.Task
    Engine.Time

executable example
  import: executable
  main-is: example.hs
  ghc-options: -O2
  build-depends:
    engine
