cabal-version: 2.2
name: fontconfig-freetype
version: 0
synopsis: Bindings for using fontconfig with freetype
description: 
  This package provides interoperability
  between fontconfig and freetype using
  by binding the contents of
  @fontconfig/fcfreetype.h@
homepage: https://github.com/ekmett/codex/tree/master/fontconfig-freetype#readme
license: BSD-2-Clause OR Apache-2.0
license-file: LICENSE.md
author: Edward Kmett
maintainer: Edward Kmett <ekmett@gmail.com>
copyright: Copyright (c) 2019 Edward Kmett
stability: experimental
category: Graphics
build-type: Simple
extra-doc-files:
  README.md,
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ekmett/codex

library
  hs-source-dirs: src
  build-tool-depends: hsc2hs:hsc2hs
  default-language: Haskell2010
  pkgconfig-depends: fontconfig >= 2.11.91, freetype2

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Wmissing-export-lists

  build-depends:
    base >= 4.11 && < 5,
    const,
    containers >= 0.6,
    data-default,
    fontconfig,
    freetype,
    inline-c,
    template-haskell,
    transformers

  hs-source-dirs: src
  reexported-modules:
  exposed-modules:
    Graphics.Fontconfig.FreeType
