cabal-version: 2.4
name: fontconfig
version: 0
synopsis: Bindings for fontconfig
description: Bindings for fontconfig.
homepage: https://github.com/ekmett/codex/tree/master/fontconfig#readme
license: BSD-2-Clause OR Apache-2.0
license-file: LICENSE.md
author: Edward Kmett
maintainer: Edward Kmett <ekmett@gmail.com>
copyright: Copyright (c) 2019 Edward Kmett
stability: experimental
category: Graphics
build-type: Simple
extra-doc-files:
  README.md,
  CHANGELOG.md
extra-source-files:
  test/configs/*.conf
  test/fonts/*.ttf

source-repository head
  type: git
  location: https://github.com/ekmett/codex
  subdir: fontconfig

common base
  default-language: Haskell2010
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Wmissing-export-lists

  build-depends:
    base >= 4.11 && < 5,
    containers >= 0.6,
    StateVar,
    transformers

common lib
  import: base
  build-tool-depends: hsc2hs:hsc2hs
  pkgconfig-depends: fontconfig >= 2.11.91

  build-depends:
    const,
    data-default,
    inline-c,
    template-haskell

library fontconfig-raw
  import: lib
  hs-source-dirs: raw
  exposed-modules:
    Graphics.Fontconfig.Internal
    Graphics.Fontconfig.Private

library fontconfig-core
  import: lib
  hs-source-dirs: core
  build-depends: fontconfig-raw
  exposed-modules:
    Graphics.Fontconfig

library fontconfig-freetype
  import: lib
  hs-source-dirs: freetype
--  pkgconfig-depends: fontconfig >= 2.11.91, freetype2
  build-depends:
    fontconfig-raw,
    fontconfig-core,
    freetype
  exposed-modules:
    Graphics.Fontconfig.FreeType
--
---- Catch-all library for users who don't care about fine-grained dependencies
library
  default-language: Haskell2010
  build-depends:
    fontconfig-core,
    fontconfig-freetype,
    fontconfig-raw
  reexported-modules:
    Graphics.Fontconfig,
    Graphics.Fontconfig.Internal,
    Graphics.Fontconfig.Private

test-suite spec
  import: base
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
