cabal-version: 2.2
name: freetype
version: 0
author: Edward Kmett <ekmett@gmail.com>
maintainer: Edward Kmett <ekmett@gmail.com>
copyright: (C) Edward Kmett 2019
homepage: https://github.com/ekmett/codex/tree/master/freetype#readme
synopsis: FreeType 2
description: FreeType 2
license: BSD-2-Clause OR Apache-2.0
license-file: LICENSE.md
category: Graphics
build-type: Simple
extra-source-files:
  cbits/ft.h
  cbits/err_exports.h
  cbits/err_patterns.h

source-repository head
  type: git
  location: git://github.com/ekmett/codex.git

flag examples
  description: Build example programs
  default: False

common base
  default-language: Haskell2010
  pkgconfig-depends: freetype2
  build-depends:
    base > 4.11 && < 5,
    containers,
    inline-c,
    template-haskell

library raw
  import: base
  build-tool-depends: hsc2hs:hsc2hs
  hs-source-dirs: raw
  c-sources: cbits/ft.c
  include-dirs: cbits
  exposed-modules:
    Graphics.FreeType.Internal
    Graphics.FreeType.Private

library
  import: base
  hs-source-dirs: src
  ghc-options: -Wall
  build-depends: raw
  reexported-modules:
    Graphics.FreeType.Internal
  exposed-modules:
    Graphics.FreeType
    Graphics.FreeType.Library
    Graphics.FreeType.Version
