cabal-version: 2.2
name: freetype
version: 0
author: Edward Kmett <ekmett@gmail.com>
maintainer: Edward Kmett <ekmett@gmail.com>
copyright: (C) Edward Kmett 2019
homepage: https://github.com/ekmett/codex/tree/master/freetype#readme
synopsis: FreeType 2
description: FreeType 2
license: BSD-2-Clause OR Apache-2.0
license-file: LICENSE.md
category: Graphics
build-type: Simple
extra-source-files:
  cbits/*.h
  test/fonts/*.ttf
  test/fonts/*.otf

source-repository head
  type: git
  location: git://github.com/ekmett/codex.git

flag examples
  description: Build example programs
  default: False

common base
  default-language: Haskell2010
  pkgconfig-depends: freetype2
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Wmissing-export-lists
    -optc -Wno-pointer-sign
  build-depends:
    base > 4.11 && < 5,
    bytestring,
    containers,
    inline-c,
    primitive,
    template-haskell

library raw
  import: base
  build-tool-depends: hsc2hs:hsc2hs
  hs-source-dirs: raw
  c-sources: cbits/ft.c
  include-dirs: cbits
  exposed-modules:
    Graphics.FreeType.Internal
    Graphics.FreeType.Private

library
  import: base
  hs-source-dirs: src
  build-depends: raw
  reexported-modules:
    Graphics.FreeType.Internal
  exposed-modules:
    Graphics.FreeType
    Graphics.FreeType.Face
    Graphics.FreeType.Library
    Graphics.FreeType.Version

test-suite spec
  import: base
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  build-depends:
    freetype,
    hspec,
    tasty,
    tasty-hspec
