cabal-version: 2.2
name: freetype
version: 0
author: Edward Kmett <ekmett@gmail.com>
maintainer: Edward Kmett <ekmett@gmail.com>
copyright: (C) Edward Kmett 2019
homepage: https://github.com/ekmett/codex/tree/master/freetype#readme
synopsis: FreeType 2
description: FreeType 2
license: BSD-2-Clause OR Apache-2.0
license-file: LICENSE.md
category: Graphics
build-type: Simple
extra-source-files:
  cbits/*.h
  test/fonts/*.ttf
  test/fonts/*.otf
  test/golden/*.golden.png

source-repository head
  type: git
  location: git://github.com/ekmett/codex.git
  subdir: freetype

flag examples
  description: Build example programs
  default: False

common base
  default-language: Haskell2010
  pkgconfig-depends: freetype2
  build-depends:
    base > 4.11 && < 5,
    bytestring,
    containers,
    data-default,
    fixed >= 0.3,
    inline-c,
    primitive,
    ptrdiff,
    template-haskell

common lib
  import: base
  build-tool-depends: hsc2hs:hsc2hs
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Wmissing-export-lists
    -optc -Wno-pointer-sign

library raw
  import: lib
  hs-source-dirs: raw
  c-sources: cbits/ft.c
  include-dirs: cbits
  exposed-modules:
    Graphics.FreeType.Internal
    Graphics.FreeType.Private

library
  import: lib
  hs-source-dirs: src
  build-depends: raw
  reexported-modules:
    Graphics.FreeType.Internal
  exposed-modules:
    Graphics.FreeType
    Numeric.Fixed.F26Dot6

test-suite spec
  import: base
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  build-depends:
    freetype,
    hspec,
    JuicyPixels >= 3.3.3.1,
    tasty,
    tasty-golden,
    tasty-hspec

executable example
  import: base
  main-is: example.hs
  build-depends:
    freetype,
    JuicyPixels >= 3.3.3.1
