cabal-version: 2.2
name: glow
version: 0
synopsis: Low-level wrappings around the 'gl' library
description: Low-level wrappings around the 'gl' library.
homepage: https://github.com/ekmett/codex/tree/master/glow#readme
license: BSD-2-Clause OR Apache-2.0
license-file: LICENSE.md
author: Edward Kmett
maintainer: Edward Kmett <ekmett@gmail.com>
copyright: Copyright (c) 2019 Edward Kmett
stability: experimental
category: Graphics
build-type: Simple
extra-doc-files:
  README.md,
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ekmett/codex

library
  hs-source-dirs: src
  build-depends: base >= 4.11 && < 5
  default-language: Haskell2010
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Wmissing-export-lists
  build-depends:
    adjunctions,
    bytestring,
    containers,
    data-default,
    distributive,
    JuicyPixels,
    gl,
    lens,
    linear,
    mtl,
    primitive,
    ptrdiff,
    StateVar,
    transformers,
    vector

  exposed-modules:
    Graphics.Glow
    Graphics.Glow.Attribute
    Graphics.Glow.Block
    Graphics.Glow.Buffer
    Graphics.Glow.Debug
    Graphics.Glow.Draw
    Graphics.Glow.Error
    Graphics.Glow.Framebuffer
    Graphics.Glow.Image
    Graphics.Glow.Object
    Graphics.Glow.Pixel
    Graphics.Glow.Program
    Graphics.Glow.ProgramPipeline
    Graphics.Glow.Renderbuffer
    Graphics.Glow.Sampler
    Graphics.Glow.Shader
    Graphics.Glow.Texture
    Graphics.Glow.Types
    Graphics.Glow.Uniform
    Graphics.Glow.Version
    Graphics.Glow.VertexArray
