cabal-version: 2.2
name: harfbuzz-freetype
version: 0
synopsis: Text shaping using harfbuzz
description: Text shaping using harfbuzz
homepage: https://github.com/ekmett/codex/tree/master/harfbuzz-freetype#readme
license: BSD-2-Clause OR Apache-2.0
license-file: LICENSE.md
author: Edward Kmett
maintainer: Edward Kmett <ekmett@gmail.com>
copyright: Copyright (c) 2019 Edward Kmett
stability: experimental
category: Graphics
build-type: Simple
extra-doc-files:
  README.md,
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ekmett/codex

library
  default-language: Haskell2010
  hs-source-dirs: src
  pkgconfig-depends: harfbuzz, freetype2
  build-depends:
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Wmissing-export-lists
    -optc -Wno-pointer-sign
  build-depends:
    base >= 4.11 && < 5,
    containers >= 0.6,
    freetype,
    harfbuzz,
    inline-c,
    StateVar,
    template-haskell,
    transformers
  exposed-modules:
    Graphics.Harfbuzz.FreeType

