cabal-version: 2.2
name: harfbuzz-freetype
version: 0
synopsis: Text shaping using harfbuzz
description: Text shaping using harfbuzz
homepage: https://github.com/ekmett/codex/tree/master/harfbuzz-freetype#readme
license: BSD-2-Clause OR Apache-2.0
license-file: LICENSE.md
author: Edward Kmett
maintainer: Edward Kmett <ekmett@gmail.com>
copyright: Copyright (c) 2019 Edward Kmett
stability: experimental
category: Graphics
build-type: Simple
extra-doc-files:
  README.md,
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ekmett/codex

common base
  default-language: Haskell2010
  build-depends:
    base >= 4.11 && < 5,
    freetype,
    harfbuzz,
    primitive-statevar

library
  import: base
  hs-source-dirs: src
  ghc-options: -Wmissing-export-lists
  pkgconfig-depends: harfbuzz, freetype2
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -optc -Wno-pointer-sign
  build-depends:
    containers >= 0.6,
    ghc-prim,
    inline-c,
    template-haskell,
    transformers
  exposed-modules:
    Graphics.Harfbuzz.FreeType

executable example
  import: base
  main-is: example.hs
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    atlas,
    gl,
    glow,
    harfbuzz-freetype,
    linear,
    sdl2,
    StateVar
