cabal-version: 2.2
name: harfbuzz-icu
version: 0
synopsis: Harfbuzz-ICU interoperability
description: Harfbuzz-ICU interoperability.
homepage: https://github.com/ekmett/codex/tree/master/harfbuzz-icu#readme
license: BSD-2-Clause OR Apache-2.0
license-file: LICENSE.md
author: Edward Kmett
maintainer: Edward Kmett <ekmett@gmail.com>
copyright: Copyright (c) 2019 Edward Kmett
stability: experimental
category: Graphics
build-type: Simple
extra-doc-files:
  README.md,
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ekmett/codex

flag trust-darwin-pkg-config
  description:
    On OSX, trust pkg-config to find harfbuzz-icu's icu4c dependency rather than try to find it ourselves. You will probably something like
    .
    @
    $ export PKG_CONFIG_PATH=/usr/local/opt/icu4c/lib/pkgconfig
    @
    .
    to build. On other platforms this flag has no effect.
  default: False
  manual: True

library
  default-language: Haskell2010
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Wmissing-export-lists
  if os(darwin) && !flag(trust-darwin-pkg-config)
    -- icu4c doesn't get installed in pkgconfig on a mac by default
    -- manually add the path, like text-icu does.
    extra-lib-dirs: /usr/local/opt/icu4c/lib
    include-dirs: /usr/local/opt/icu4c/include
    -- harfbuzz works fine with pkg-config
    pkgconfig-depends: harfbuzz
    -- and this adds the library dir needed for harfbuzz-icu, so just manually add that library dependency
    extra-libraries: harfbuzz-icu
  else
    pkgconfig-depends: harfbuzz-icu
  build-depends:
    base >= 4.11 && < 5,
    containers >= 0.6,
    harfbuzz,
    inline-c,
    template-haskell,
    transformers
  hs-source-dirs: src
  exposed-modules: Graphics.Harfbuzz.ICU
