cabal-version: 2.2
name: harfbuzz-opentype
version: 0
synopsis: Harfbuzz opentype support
description: Harfbuzz opentype support
homepage: https://github.com/ekmett/codex/tree/master/harfbuzz-opentype#readme
license: BSD-2-Clause OR Apache-2.0
license-file: LICENSE.md
author: Edward Kmett
maintainer: Edward Kmett <ekmett@gmail.com>
copyright: Copyright (c) 2019 Edward Kmett
stability: experimental
category: Graphics
build-type: Simple
extra-doc-files:
  README.md,
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ekmett/codex

common base
  default-language: Haskell2010
  build-depends:
    base >= 4.11 && < 5,
    const,
    data-default,
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Wmissing-export-lists

common lib
  import: base
  pkgconfig-depends: harfbuzz
  extra-libraries: harfbuzz
  build-depends:
    bytestring,
    containers >= 0.6,
    harfbuzz,
    hashable,
    inline-c,
    primitive,
    StateVar,
    template-haskell,
    text,
    transformers

library raw
  import: lib
  hs-source-dirs: raw
  build-tool-depends: hsc2hs:hsc2hs
  exposed-modules:
    Graphics.Harfbuzz.OpenType.Internal
    Graphics.Harfbuzz.OpenType.Private

library
  import: lib
  build-depends: ghc-prim, hkd, raw
  hs-source-dirs: src
  reexported-modules: Graphics.Harfbuzz.Internal
  exposed-modules:
    Graphics.Harfbuzz.OpenType
    Graphics.Harfbuzz.OpenType.Color
    Graphics.Harfbuzz.OpenType.Font
    Graphics.Harfbuzz.OpenType.Math
    Graphics.Harfbuzz.OpenType.Layout
    Graphics.Harfbuzz.OpenType.Name
    Graphics.Harfbuzz.OpenType.Shape
    Graphics.Harfbuzz.OpenType.Variation
