cabal-version: 2.2
name: harfbuzz-subset
version: 0
synopsis: Font subsetting using harfbuzz
description: Font subsetting using harfbuzz.
homepage: https://github.com/ekmett/codex/tree/master/harfbuzz-subset#readme
license: BSD-2-Clause OR Apache-2.0
license-file: LICENSE.md
author: Edward Kmett
maintainer: Edward Kmett <ekmett@gmail.com>
copyright: Copyright (c) 2019 Edward Kmett
stability: experimental
category: Graphics
build-type: Simple
extra-doc-files:
  README.md,
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ekmett/codex

library
  default-language: Haskell2010
  pkgconfig-depends: harfbuzz-subset
  build-depends:
    base >= 4.11 && < 5,
    containers >= 0.6,
    data-default,
    harfbuzz,
    inline-c,
    primitive,
    primitive-statevar,
    template-haskell
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Wmissing-export-lists
  build-depends:
  hs-source-dirs: src
  exposed-modules:
    Graphics.Harfbuzz.Subset
