cabal-version: 2.2
name: harfbuzz
version: 0
synopsis: Text shaping using harfbuzz
description: Text shaping using harfbuzz
homepage: https://github.com/ekmett/codex/tree/master/harfbuzz#readme
license: BSD-2-Clause OR Apache-2.0
license-file: LICENSE.md
author: Edward Kmett
maintainer: Edward Kmett <ekmett@gmail.com>
copyright: Copyright (c) 2019 Edward Kmett
stability: experimental
category: Graphics
build-type: Simple
extra-doc-files:
  README.md,
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ekmett/codex

common base
  default-language: Haskell2010
  build-depends:
    base >= 4.11 && < 5,
    const,
    data-default,
    primitive-statevar,
    text,
    vector
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Wmissing-export-lists

common lib
  import: base
  pkgconfig-depends: harfbuzz
  extra-libraries: harfbuzz
  ghc-options: -optc -Wno-pointer-sign
  build-depends:
    bytestring,
    containers >= 0.6,
    hashable,
    inline-c,
    primitive,
    template-haskell,
    transformers,

library raw
  import: lib
  hs-source-dirs: raw
  build-tool-depends: hsc2hs:hsc2hs
  exposed-modules:
    Graphics.Harfbuzz.Internal
    Graphics.Harfbuzz.Private

library
  import: lib
  build-depends: ghc-prim, hkd, raw
  hs-source-dirs: src
  reexported-modules: Graphics.Harfbuzz.Internal
  exposed-modules:
    Graphics.Harfbuzz
    Graphics.Harfbuzz.Blob
    Graphics.Harfbuzz.Buffer
    Graphics.Harfbuzz.Common
    Graphics.Harfbuzz.Face
    Graphics.Harfbuzz.Font
    Graphics.Harfbuzz.Map
    Graphics.Harfbuzz.Object
    Graphics.Harfbuzz.Set
    Graphics.Harfbuzz.Shape
    Graphics.Harfbuzz.Unicode
    Graphics.Harfbuzz.Version

test-suite spec
  import: base
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  build-depends:
    harfbuzz,
    hspec,
    tasty,
    tasty-hspec
